# pico2w-template

./: CMakeLists.txt  README.md  blink.c  blink.h
